julia - fixing controllers and adding validation
