# routes/users.js
@@ -1,11 +1,14 @@
 const router = require('express').Router();
 const usersController = require('../controllers/users');
 
+const validation = require('../middleware/validate');
+
 router.get('/', usersController.getAllUsers);
 router.get('/:id', usersController.getUserById);
 
-router.post('/', usersController.createUser);
-router.put('/:id', usersController.updateUser);
+router.post('/', validation.validateUser, usersController.createUser);
+router.put('/:id', validation.validateUser, usersController.updateUser);
+
 router.delete('/:id', usersController.deleteUser);
 
 module.exports = router;
